--- a/.github/workflows/reusable_build_sample_apps.yml
+++ b/.github/workflows/reusable_build_sample_apps.yml
@@ -43,10 +43,12 @@ jobs:
             apn-or-fcm: "APN"
             cio-siteid-secret-key: "CUSTOMERIO_APN_WORKSPACE_SITE_ID"
             cio-cdpapikey-secret-key: "CUSTOMERIO_APN_WORKSPACE_CDP_API_KEY"
+            cio-workspace-name: "Mobile: Native iOS & Android"
           - sample-app: "CocoaPods-FCM"
             apn-or-fcm: "FCM"
             cio-siteid-secret-key: "CUSTOMERIO_FCM_WORKSPACE_SITE_ID"
             cio-cdpapikey-secret-key: "CUSTOMERIO_FCM_WORKSPACE_CDP_API_KEY"
+            cio-workspace-name: "Mobile: xiOS CocoaPods FCM + Kotlin Android"
 
     steps:
       - name: Check out code (with full history for tags)
@@ -131,6 +133,8 @@ jobs:
           sample-app: ${{ matrix.sample-app }}
           customerio-workspace-siteid: ${{ secrets[matrix.cio-siteid-secret-key] }}
           customerio-workspace-cdp-api-key: ${{ secrets[matrix.cio-cdpapikey-secret-key] }}
+          customerio-workspace-name: ${{ matrix.cio-workspace-name }}
+          customerio-public-sdk-version: ${{ inputs.use_latest_sdk_version == 'true' && env.LATEST_TAG || '' }}
           GOOGLE_CLOUD_MATCH_READONLY_SERVICE_ACCOUNT_B64: ${{ secrets.GOOGLE_CLOUD_MATCH_READONLY_SERVICE_ACCOUNT_B64 }}
           FIREBASE_APP_DISTRIBUTION_SERVICE_ACCOUNT_CREDS_B64: ${{ secrets.FIREBASE_APP_DISTRIBUTION_SERVICE_ACCOUNT_CREDS_B64 }}
           fastlane-build-args: ${{ env.fastlane_build_args }}
