--- a/.github/workflows/reusable_build_sample_apps.yml
+++ b/.github/workflows/reusable_build_sample_apps.yml
@@ -134,7 +134,7 @@ jobs:
           customerio-workspace-siteid: ${{ secrets[matrix.cio-siteid-secret-key] }}
           customerio-workspace-cdp-api-key: ${{ secrets[matrix.cio-cdpapikey-secret-key] }}
           customerio-workspace-name: ${{ matrix.cio-workspace-name }}
-          customerio-public-sdk-version: ${{ inputs.use_latest_sdk_version == 'true' && env.LATEST_TAG || '' }}
+          customerio-public-sdk-version: ${{ env.LATEST_TAG }}
           GOOGLE_CLOUD_MATCH_READONLY_SERVICE_ACCOUNT_B64: ${{ secrets.GOOGLE_CLOUD_MATCH_READONLY_SERVICE_ACCOUNT_B64 }}
           FIREBASE_APP_DISTRIBUTION_SERVICE_ACCOUNT_CREDS_B64: ${{ secrets.FIREBASE_APP_DISTRIBUTION_SERVICE_ACCOUNT_CREDS_B64 }}
           fastlane-build-args: ${{ env.fastlane_build_args }}
